# SDL2-Game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  background.cpp  background.hpp  coldet.cpp  coldet.hpp  game.cpp  game.hpp  main.cpp  particle.cpp  particle.hpp  texture.cpp  texture.hpp  vector.cpp  vector.hpp
src/: coldet.cpp  coldet.hpp  game.cpp  game.hpp  layer.cpp  layer.hpp  main.cpp  particle.cpp  particle.hpp  texture.cpp  texture.hpp  vector.cpp  vector.hpp
